--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,9 @@
         <!-- geomixer -->
         <link rel="stylesheet" href="http://www.kosmosnimki.ru/lib/geomixer/geomixer.css" charset="utf-8" />
         <script type="text/javascript" src="http://www.kosmosnimki.ru/lib/geomixer/geomixer-src.js" charset="utf-8"></script>
+        <!-- timeline -->
+        <link rel="stylesheet" href="http://maps.kosmosnimki.ru/api/plugins/timeline/2.9.1/timeline.css" />
+        <script src="http://maps.kosmosnimki.ru/api/plugins/timeline/2.9.1/timeline.js"></script>
     </head>
     <body>
         <div class="wrap">
