--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" />
         <link rel="stylesheet" href="./css/main.css" charset="utf-8">
         <!-- geomixer -->
-        <link rel="stylesheet" href="http://www.kosmosnimki.ru/lib/geomixer/geomixer.css" charset="utf-8" />
-        <script type="text/javascript" src="http://www.kosmosnimki.ru/lib/geomixer/geomixer-src.js" charset="utf-8"></script>
+        <link rel="stylesheet" href="https://www.kosmosnimki.ru/lib/geomixer/geomixer.css" charset="utf-8" />
+        <script type="text/javascript" src="https://www.kosmosnimki.ru/lib/geomixer/geomixer-src.js" charset="utf-8"></script>
         <!-- timeline -->
-        <link rel="stylesheet" href="http://maps.kosmosnimki.ru/api/plugins/timeline/2.9.1/timeline.css" />
-        <script src="http://maps.kosmosnimki.ru/api/plugins/timeline/2.9.1/timeline.js"></script>
+        <link rel="stylesheet" href="https://maps.kosmosnimki.ru/api/plugins/timeline/2.9.1/timeline.css" />
+        <script src="https://maps.kosmosnimki.ru/api/plugins/timeline/2.9.1/timeline.js"></script>
     </head>
     <body>
         <div class="wrap">
