Create preview markup

--- a/src/preview.html
+++ b/src/preview.html
@@ -2,10 +2,23 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Предпросмотр</title>
+        <!-- bootstrap -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!-- leaflet -->
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" />
+        <link rel="stylesheet" href="./css/main.css" charset="utf-8">
+        <!-- geomixer -->
+        <link rel="stylesheet" href="https://www.kosmosnimki.ru/lib/geomixer/geomixer.css" charset="utf-8" />
+        <script type="text/javascript" src="https://www.kosmosnimki.ru/lib/geomixer/geomixer-src.js" charset="utf-8"></script>
+
         <link rel="stylesheet" href="./css/preview.css" charset="utf-8">
     </head>
     <body>
-        <section size="A4" layout="portrait"></section>
+        <section size="A4" layout="portrait">
+            <div class="preview-header"></div>
+            <div id="preview-map-container"></div>
+            <div id="preview-params-container"></div>
+        </section>
     </body>
 </html>
