--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
             <div id="map">
             </div>
         </div>
-    <script type="text/javascript" src="bundle.js"></script></body>
+    <script type="text/javascript" src="index.js"></script></body>
 </html>
