Highlight zoomed feature

--- a/src/preview.html
+++ b/src/preview.html
@@ -19,6 +19,17 @@
             <div class="preview-header"></div>
             <div id="preview-map-container"></div>
             <div id="preview-params-container"></div>
+            <div id="preview-footer">
+                <img class="scanex-logo" src="./css/scanex_logo.jpg" />
+                <div class="scanex-description">
+                    <b>Группа компаний «СКАНЭКС»</b>
+                    <br>
+                    108811, г. Москва, пос. Румянцево, стр. 1, Бизнес-парк «Румянцево», корп. А, 819А
+                    <br>
+                    Телефон: +7 (495) 739-73-85
+                    <br>E-mail: info@scanex.ru
+                </div>
+            </div>
         </section>
     </body>
 </html>
