--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,7 @@
         <!-- timeline -->
         <link rel="stylesheet" href="https://maps.kosmosnimki.ru/api/plugins/timeline/2.9.1/timeline.css" />
         <script src="https://maps.kosmosnimki.ru/api/plugins/timeline/2.9.1/timeline.js"></script>
-    </head>
+    <link href="index.f042ddef5e7a809ea0b864c329a1977c.css" rel="stylesheet"></head>
     <body>
         <div class="wrap">
             <div class="left-panel">
