--- a/demo/index.html
+++ b/demo/index.html
@@ -7,14 +7,14 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <!-- leaflet -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" />
-        <link rel="stylesheet" href="./css/main.css" charset="utf-8">
+        <link rel="stylesheet" href="./css/index.css" charset="utf-8">
         <!-- geomixer -->
         <link rel="stylesheet" href="https://www.kosmosnimki.ru/lib/geomixer/geomixer.css" charset="utf-8" />
         <script type="text/javascript" src="https://www.kosmosnimki.ru/lib/geomixer/geomixer-src.js" charset="utf-8"></script>
         <!-- timeline -->
         <link rel="stylesheet" href="https://maps.kosmosnimki.ru/api/plugins/timeline/2.9.1/timeline.css" />
         <script src="https://maps.kosmosnimki.ru/api/plugins/timeline/2.9.1/timeline.js"></script>
-    <link href="index.f042ddef5e7a809ea0b864c329a1977c.css" rel="stylesheet"></head>
+    <link href="./css/index.css" rel="stylesheet"></head>
     <body>
         <div class="wrap">
             <div class="left-panel">
