--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <!-- leaflet -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" />
-        <link rel="stylesheet" href="./css/main.css" charset="utf-8">
+        <link rel="stylesheet" href="./css/index.css" charset="utf-8">
         <!-- geomixer -->
         <link rel="stylesheet" href="https://www.kosmosnimki.ru/lib/geomixer/geomixer.css" charset="utf-8" />
         <script type="text/javascript" src="https://www.kosmosnimki.ru/lib/geomixer/geomixer-src.js" charset="utf-8"></script>
