Use separate dateIntervals

--- a/src/server-preview/page.html
+++ b/src/server-preview/page.html
@@ -8,7 +8,7 @@
 
     <body>
         <div class="preview-header">Отчет {{reportType}}</div>
-        <div class="preview-map-container"><img src="Image?width=600&height=500&request={{jsonUrlCoded}}"/></div>
+        <div class="preview-map-container"><img src="Image?width=600&height=500&requestid={{requestid}}"/></div>
 
         <div class="preview-params-container">
             <div>
